code/src/index.css
body {
  background-color: #fbcfcf;
  margin: 0 auto;
  font-family: 'Calibri', 'Trebuchet MS', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
  color: black;
}

main {
  margin: 0 auto;
  width: 90vw;
  box-sizing: border-box;
}

.form {
  margin: 1rem 0;
  box-shadow: 5px 5px;
  border: 2px solid #7C7C7C;
  background-color: #F2F0F0;
  padding: 1rem;
}

.thoughtCard {
  margin: 1rem 0;
  box-shadow: 5px 5px;
  border: 2px solid #7C7C7C;
  background-color: white;
  padding: 1rem;
  overflow: auto;
}

.userInput {
  border: C9C9C9 solid 1 px;
  overflow: auto;
  width: 95%;
  resize: none;
}

.submitBtn {
  padding: 0.7rem;
  margin: 0.8rem 0;
  display: block;
  border-radius: 1rem;
  background-color: #FFAEAD;
  border: 0px;
}

.heartBtn {
  width: 2.5rem;
  height: 2.5rem;
  background-color: #F2F0F0;
  border-radius: 50%;
  border: 0px;
}

.pink {
  background-color: #FFAEAD;
}

.submitBtn:hover, .heartBtn:hover {
  transform: scale(1.1);
}

.cardFooter {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #7C7C7C;
}

/* TABLET */
@media (min-width: 668px) and (max-width: 1024px) {
  main {
    width: 70vw;
  }
}

/* DESKTOP */
@media (min-width: 1025px) {
  main {
    width: 35vw;
  }
}

